# domainmind-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  start.bat  设计文档-人工智能应用开发实训多智能体个性化知识生成系统.md  需求文档-领域知识个性化生成与多智能体协同决策系统.md  题目要求与背景分析.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260705_0001_initial_mvp_schema.py  20260716_0002_p0_unified_loop.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  checkpointer.py  contract_adapters.py  contract_examples.py  contracts.py  generation_agent.py  graphs.py  legacy_contracts.py  legacy_state.py  nodes.py  orchestrator.py  profile_agent.py  retrieval_agent.py  review_agent.py  state.py  tools.py  tutoring_agent.py  v2_retrieval_agent.py
backend/app/core/: compatibility.py  config.py  db.py  errors.py  logging.py  security.py
backend/app/models/: __init__.py  agent.py  diagnostic.py  domain.py  evaluation.py  feedback.py  knowledge.py  learner.py  resource.py  tutoring.py  user.py
backend/app/rag/: __init__.py  candidate_chunker.py  candidate_index.py  candidate_manifest.py  chunker.py  embedding_provider.py  embeddings.py  retriever.py  v2_retrieval.py  vector_store.py
backend/app/repositories/: agent_repo.py  base.py  knowledge_repo.py  learner_repo.py  resource_repo.py
backend/app/schemas/: common.py
backend/app/scripts/: build_chroma_candidate_index.py  build_chroma_index.py  check_embedding_provider.py  evaluate_rag.py  export_agent_contract_v2.py  seed_data.py  (+2 more)
backend/tests/: conftest.py
(+147 files in other folders)
