[project]
name = "yunchuan-zhihui-backend"
version = "0.1.0"
description = "FastAPI backend for the Yunchuan Zhihui MVP."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "sqlalchemy==2.0.35",
  "alembic==1.13.3",
  "pymysql==1.1.1",
  "cryptography==46.0.5",
  "langgraph==0.2.56",
  "openai==1.51.2",
  "chromadb==1.5.8",
  "pypdf==4.3.1",
  "markdown==3.7",
]

[project.optional-dependencies]
dev = [
  "httpx==0.27.2",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "ruff==0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
